tests/should_fail/unsupported/macros.rs
extern crate creusot_contracts;
use creusot_contracts::prelude::*;

#[logic(open)]
pub fn f() {
    panic!()
}
